Alvin_Tan_113-2-NCKU-CompilerHW2/y.output
Terminals unused in grammar

    GEQ
    LEQ
    FOR
    LOOP
    RETURN
    BREAK
    ARROW
    IN
    DOTDOT
    RSHIFT


State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 $@1: ε

    2 Program: $@1 GlobalStatementList

    3 GlobalStatementList: GlobalStatementList GlobalStatement
    4                    | GlobalStatement

    5 GlobalStatement: FunctionDeclStmt
    6                | NEWLINE

    7 $@2: ε

    8 FunctionDeclStmt: FuncHeader '(' ')' $@2 Block

    9 FuncHeader: FUNC ID

   10 $@3: ε

   11 Block: '{' $@3 StatementList '}'

   12 StatementList: StatementList Statement
   13              | ε

   14 IfStmt: IF Expression Block
   15       | IF Expression Block ELSE Block

   16 WhileStmt: WHILE Expression Block

   17 Statement: IfStmt
   18          | WhileStmt
   19          | LET ID '=' Expression ';'
   20          | LET MUT ID '=' Expression ';'
   21          | LET ID ':' Type ';'
   22          | LET MUT ID ':' Type ';'
   23          | LET ID ':' Type '=' ArrayLiteral ';'
   24          | LET ID ':' Type '=' Expression ';'
   25          | LET MUT ID ':' Type '=' Expression ';'
   26          | PRINTLN '(' Expression ')' ';'
   27          | PRINT '(' Expression ')' ';'
   28          | Block
   29          | NEWLINE
   30          | ID '=' Expression ';'
   31          | ID LSHIFT Expression ';'
   32          | ID ADD_ASSIGN Expression ';'
   33          | ID SUB_ASSIGN Expression ';'
   34          | ID MUL_ASSIGN Expression ';'
   35          | ID DIV_ASSIGN Expression ';'
   36          | ID REM_ASSIGN Expression ';'

   37 ArrayElems: INT_LIT
   38           | ArrayElems ',' INT_LIT

   39 ArrayLiteral: '[' ArrayElems ']'

   40 Expression: ID
   41           | INT_LIT
   42           | FLOAT_LIT
   43           | STRING_LIT
   44           | TRUE
   45           | FALSE
   46           | Expression AS Type
   47           | Expression '+' Expression
   48           | Expression '-' Expression
   49           | Expression '*' Expression
   50           | Expression '/' Expression
   51           | Expression '%' Expression
   52           | Expression '>' Expression
   53           | Expression '<' Expression
   54           | Expression LAND Expression
   55           | Expression LOR Expression
   56           | '!' Expression
   57           | '-' Expression
   58           | '(' Expression ')'
   59           | Expression EQL Expression
   60           | Expression NEQ Expression
   61           | Expression '[' INT_LIT ']'
   62           | Expression LSHIFT Expression

   63 Type: INT
   64     | FLOAT
   65     | BOOL
   66     | '&' STR
   67     | '[' Type ';' INT_LIT ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 56
    '%' (37) 51
    '&' (38) 66
    '(' (40) 8 26 27 58
    ')' (41) 8 26 27 58
    '*' (42) 49
    '+' (43) 47
    ',' (44) 38
    '-' (45) 48 57
    '/' (47) 50
    ':' (58) 21 22 23 24 25
    ';' (59) 19 20 21 22 23 24 25 26 27 30 31 32 33 34 35 36 67
    '<' (60) 53
    '=' (61) 19 20 23 24 25 30
    '>' (62) 52
    '[' (91) 39 61 67
    ']' (93) 39 61 67
    '{' (123) 11
    '}' (125) 11
    error (256)
    UMINUS (258)
    LET (259) 19 20 21 22 23 24 25
    MUT (260) 20 22 25
    NEWLINE (261) 6 29
    INT (262) 63
    FLOAT (263) 64
    BOOL (264) 65
    STR (265) 66
    TRUE (266) 44
    FALSE (267) 45
    GEQ (268)
    LEQ (269)
    EQL (270) 59
    NEQ (271) 60
    LOR (272) 55
    LAND (273) 54
    ADD_ASSIGN (274) 32
    SUB_ASSIGN (275) 33
    MUL_ASSIGN (276) 34
    DIV_ASSIGN (277) 35
    REM_ASSIGN (278) 36
    IF (279) 14 15
    ELSE (280) 15
    FOR (281)
    WHILE (282) 16
    LOOP (283)
    PRINT (284) 27
    PRINTLN (285) 26
    FUNC (286) 9
    RETURN (287)
    BREAK (288)
    ARROW (289)
    AS (290) 46
    IN (291)
    DOTDOT (292)
    RSHIFT (293)
    LSHIFT (294) 31 62
    INT_LIT <i_val> (295) 37 38 41 61 67
    FLOAT_LIT <f_val> (296) 42
    STRING_LIT <s_val> (297) 43
    ID <s_val> (298) 9 19 20 21 22 23 24 25 30 31 32 33 34 35 36 40


Nonterminals, with rules where they appear

    $accept (63)
        on left: 0
    Program (64)
        on left: 2
        on right: 0
    $@1 (65)
        on left: 1
        on right: 2
    GlobalStatementList (66)
        on left: 3 4
        on right: 2 3
    GlobalStatement (67)
        on left: 5 6
        on right: 3 4
    FunctionDeclStmt (68)
        on left: 8
        on right: 5
    $@2 (69)
        on left: 7
        on right: 8
    FuncHeader <s_val> (70)
        on left: 9
        on right: 8
    Block (71)
        on left: 11
        on right: 8 14 15 16 28
    $@3 (72)
        on left: 10
        on right: 11
    StatementList (73)
        on left: 12 13
        on right: 11 12
    IfStmt (74)
        on left: 14 15
        on right: 17
    WhileStmt (75)
        on left: 16
        on right: 18
    Statement (76)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 12
    ArrayElems (77)
        on left: 37 38
        on right: 38 39
    ArrayLiteral <expr> (78)
        on left: 39
        on right: 23
    Expression <expr> (79)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 14 15 16 19 20 24 25 26 27 30 31 32 33 34 35 36 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    Type <s_val> (80)
        on left: 63 64 65 66 67
        on right: 21 22 23 24 25 46 67


State 0

    0 $accept: • Program $end

    $default  reduce using rule 1 ($@1)

    Program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    2 Program: $@1 • GlobalStatementList

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5

    GlobalStatementList  go to state 6
    GlobalStatement      go to state 7
    FunctionDeclStmt     go to state 8
    FuncHeader           go to state 9


State 3

    0 $accept: Program $end •

    $default  accept


State 4

    6 GlobalStatement: NEWLINE •

    $default  reduce using rule 6 (GlobalStatement)


State 5

    9 FuncHeader: FUNC • ID

    ID  shift, and go to state 10


State 6

    2 Program: $@1 GlobalStatementList •
    3 GlobalStatementList: GlobalStatementList • GlobalStatement

    NEWLINE  shift, and go to state 4
    FUNC     shift, and go to state 5

    $default  reduce using rule 2 (Program)

    GlobalStatement   go to state 11
    FunctionDeclStmt  go to state 8
    FuncHeader        go to state 9


State 7

    4 GlobalStatementList: GlobalStatement •

    $default  reduce using rule 4 (GlobalStatementList)


State 8

    5 GlobalStatement: FunctionDeclStmt •

    $default  reduce using rule 5 (GlobalStatement)


State 9

    8 FunctionDeclStmt: FuncHeader • '(' ')' $@2 Block

    '('  shift, and go to state 12


State 10

    9 FuncHeader: FUNC ID •

    $default  reduce using rule 9 (FuncHeader)


State 11

    3 GlobalStatementList: GlobalStatementList GlobalStatement •

    $default  reduce using rule 3 (GlobalStatementList)


State 12

    8 FunctionDeclStmt: FuncHeader '(' • ')' $@2 Block

    ')'  shift, and go to state 13


State 13

    8 FunctionDeclStmt: FuncHeader '(' ')' • $@2 Block

    $default  reduce using rule 7 ($@2)

    $@2  go to state 14


State 14

    8 FunctionDeclStmt: FuncHeader '(' ')' $@2 • Block

    '{'  shift, and go to state 15

    Block  go to state 16


State 15

   11 Block: '{' • $@3 StatementList '}'

    $default  reduce using rule 10 ($@3)

    $@3  go to state 17


State 16

    8 FunctionDeclStmt: FuncHeader '(' ')' $@2 Block •

    $default  reduce using rule 8 (FunctionDeclStmt)


State 17

   11 Block: '{' $@3 • StatementList '}'

    $default  reduce using rule 13 (StatementList)

    StatementList  go to state 18


State 18

   11 Block: '{' $@3 StatementList • '}'
   12 StatementList: StatementList • Statement

    LET      shift, and go to state 19
    NEWLINE  shift, and go to state 20
    IF       shift, and go to state 21
    WHILE    shift, and go to state 22
    PRINT    shift, and go to state 23
    PRINTLN  shift, and go to state 24
    ID       shift, and go to state 25
    '{'      shift, and go to state 15
    '}'      shift, and go to state 26

    Block      go to state 27
    IfStmt     go to state 28
    WhileStmt  go to state 29
    Statement  go to state 30


State 19

   19 Statement: LET • ID '=' Expression ';'
   20          | LET • MUT ID '=' Expression ';'
   21          | LET • ID ':' Type ';'
   22          | LET • MUT ID ':' Type ';'
   23          | LET • ID ':' Type '=' ArrayLiteral ';'
   24          | LET • ID ':' Type '=' Expression ';'
   25          | LET • MUT ID ':' Type '=' Expression ';'

    MUT  shift, and go to state 31
    ID   shift, and go to state 32


State 20

   29 Statement: NEWLINE •

    $default  reduce using rule 29 (Statement)


State 21

   14 IfStmt: IF • Expression Block
   15       | IF • Expression Block ELSE Block

    '-'         shift, and go to state 33
    '!'         shift, and go to state 34
    TRUE        shift, and go to state 35
    FALSE       shift, and go to state 36
    INT_LIT     shift, and go to state 37
    FLOAT_LIT   shift, and go to state 38
    STRING_LIT  shift, and go to state 39
    ID          shift, and go to state 40
    '('         shift, and go to state 41

    Expression  go to state 42


State 22

   16 WhileStmt: WHILE • Expression Block

    '-'         shift, and go to state 33
    '!'         shift, and go to state 34
    TRUE        shift, and go to state 35
    FALSE       shift, and go to state 36
    INT_LIT     shift, and go to state 37
    FLOAT_LIT   shift, and go to state 38
    STRING_LIT  shift, and go to state 39
    ID          shift, and go to state 40
    '('         shift, and go to state 41

    Expression  go to state 43


State 23

   27 Statement: PRINT • '(' Expression ')' ';'

    '('  shift, and go to state 44


State 24

   26 Statement: PRINTLN • '(' Expression ')' ';'

    '('  shift, and go to state 45


State 25

   30 Statement: ID • '=' Expression ';'
   31          | ID • LSHIFT Expression ';'
   32          | ID • ADD_ASSIGN Expression ';'
   33          | ID • SUB_ASSIGN Expression ';'
   34          | ID • MUL_ASSIGN Expression ';'
   35          | ID • DIV_ASSIGN Expression ';'
   36          | ID • REM_ASSIGN Expression ';'

    ADD_ASSIGN  shift, and go to state 46
    SUB_ASSIGN  shift, and go to state 47
    MUL_ASSIGN  shift, and go to state 48
    DIV_ASSIGN  shift, and go to state 49
    REM_ASSIGN  shift, and go to state 50
    LSHIFT      shift, and go to state 51
    '='         shift, and go to state 52


State 26

   11 Block: '{' $@3 StatementList '}' •

    $default  reduce using rule 11 (Block)


State 27

   28 Statement: Block •

    $default  reduce using rule 28 (Statement)


State 28

   17 Statement: IfStmt •

    $default  reduce using rule 17 (Statement)


State 29

   18 Statement: WhileStmt •

    $default  reduce using rule 18 (Statement)


State 30

   12 StatementList: StatementList Statement •

    $default  reduce using rule 12 (StatementList)


State 31

   20 Statement: LET MUT • ID '=' Expression ';'
   22          | LET MUT • ID ':' Type ';'
   25          | LET MUT • ID ':' Type '=' Expression ';'

    ID  shift, and go to state 53


State 32

   19 Statement: LET ID • '=' Expression ';'
   21          | LET ID • ':' Type ';'
   23          | LET ID • ':' Type '=' ArrayLiteral ';'
   24          | LET ID • ':' Type '=' Expression ';'

    '='  shift, and go to state 54
    ':'  shift, and go to state 55


State 33

   57 Expression: '-' • Expression

    '-'         shift, and go to state 33
    '!'         shift, and go to state 34
    TRUE        shift, and go to state 35
    FALSE       shift, and go to state 36
    INT_LIT     shift, and go to state 37
    FLOAT_LIT   shift, and go to state 38
    STRING_LIT  shift, and go to state 39
    ID          shift, and go to state 40
    '('         shift, and go to state 41

    Expression  go to state 56


State 34

   56 Expression: '!' • Expression

    '-'         shift, and go to state 33
    '!'         shift, and go to state 34
    TRUE        shift, and go to state 35
    FALSE       shift, and go to state 36
    INT_LIT     shift, and go to state 37
    FLOAT_LIT   shift, and go to state 38
    STRING_LIT  shift, and go to state 39
    ID          shift, and go to state 40
    '('         shift, and go to state 41

    Expression  go to state 57


State 35

   44 Expression: TRUE •

    $default  reduce using rule 44 (Expression)


State 36

   45 Expression: FALSE •

    $default  reduce using rule 45 (Expression)


State 37

   41 Expression: INT_LIT •

    $default  reduce using rule 41 (Expression)


State 38

   42 Expression: FLOAT_LIT •

    $default  reduce using rule 42 (Expression)


State 39

   43 Expression: STRING_LIT •

    $default  reduce using rule 43 (Expression)


State 40

   40 Expression: ID •

    $default  reduce using rule 40 (Expression)


State 41

   58 Expression: '(' • Expression ')'

    '-'         shift, and go to state 33
    '!'         shift, and go to state 34
    TRUE        shift, and go to state 35
    FALSE       shift, and go to state 36
    INT_LIT     shift, and go to state 37
    FLOAT_LIT   shift, and go to state 38
    STRING_LIT  shift, and go to state 39
    ID          shift, and go to state 40
    '('         shift, and go to state 41

    Expression  go to state 58


State 42

   14 IfStmt: IF Expression • Block
   15       | IF Expression • Block ELSE Block
   46 Expression: Expression • AS Type
   47           | Expression • '+' Expression
   48           | Expression • '-' Expression
   49           | Expression • '*' Expression
   50           | Expression • '/' Expression
   51           | Expression • '%' Expression
   52           | Expression • '>' Expression
   53           | Expression • '<' Expression
   54           | Expression • LAND Expression
   55           | Expression • LOR Expression
   59           | Expression • EQL Expression
   60           | Expression • NEQ Expression
   61           | Expression • '[' INT_LIT ']'
   62           | Expression • LSHIFT Expression

    '>'     shift, and go to state 59
    '<'     shift, and go to state 60
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65
    EQL     shift, and go to state 66
    NEQ     shift, and go to state 67
    LOR     shift, and go to state 68
    LAND    shift, and go to state 69
    AS      shift, and go to state 70
    LSHIFT  shift, and go to state 71
    '{'     shift, and go to state 15
    '['     shift, and go to state 72

    Block  go to state 73


State 43

   16 WhileStmt: WHILE Expression • Block
   46 Expression: Expression • AS Type
   47           | Expression • '+' Expression
   48           | Expression • '-' Expression
   49           | Expression • '*' Expression
   50           | Expression • '/' Expression
   51           | Expression • '%' Expression
   52           | Expression • '>' Expression
   53           | Expression • '<' Expression
   54           | Expression • LAND Expression
   55           | Expression • LOR Expression
   59           | Expression • EQL Expression
   60           | Expression • NEQ Expression
   61           | Expression • '[' INT_LIT ']'
   62           | Expression • LSHIFT Expression

    '>'     shift, and go to state 59
    '<'     shift, and go to state 60
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64
    '%'     shift, and go to state 65
    EQL     shift, and go to state 66
    NEQ     shift, and go to state 67
    LOR     shift, and go to state 68
    LAND    shift, and go to state 69
    AS      shift, and go to state 70
    LSHIFT  shift, and go to state 71
    '{'     shift, and go to state 15
    '['     shift, and go to state 72

    Block  go to state 74


State 44

   27 Statement: PRINT '(' • Expression ')' ';'

    '-'         shift, and go to state 33
    '!'         shift, and go to state 34
    TRUE        shift, and go to state 35
    FALSE       shift, and go to state 36
    INT_LIT     shift, and go to state 37
    FLOAT_LIT   shift, and go to state 38
    STRING_LIT  shift, and go to state 39
    ID          shift, and go to state 40
    '('         shift, and go to state 41

    Expression  go to state 75


State 45

   26 Statement: PRINTLN '(' • Expression ')' ';'

    '-'         shift, and go to state 33
    '!'         shift, and go to state 34
    TRUE        shift, and go to state 35
    FALSE       shift, and go to state 36
    INT_LIT     shift, and go to state 37
    FLOAT_LIT   shift, and go to state 38
    STRING_LIT  shift, and go to state 39
    ID          shift, and go to state 40
    '('         shift, and go to state 41

    Expression  go to state 76


State 46

   32 Statement: ID ADD_ASSIGN • Expression ';'
